[gd_scene load_steps=11 format=3 uid="uid://bxs8f84elb8bt"]

[ext_resource type="Script" uid="uid://brgmry2p8eh3g" path="res://scripts/enemy_chez.gd" id="1_62rb6"]
[ext_resource type="Texture2D" uid="uid://d2n27bq5jq0f1" path="res://sprites/ChonkenChez.png" id="2_3gns2"]
[ext_resource type="PackedScene" uid="uid://b2ww36wl88sug" path="res://entities/projectile_pizza.tscn" id="2_pqynd"]
[ext_resource type="PackedScene" uid="uid://cht4wrkfun4fw" path="res://ptcl/blood.tscn" id="3_62rb6"]

[sub_resource type="Animation" id="Animation_pqynd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Blood:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.5, -56.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PizzaSpitter:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-72, -48)]
}

[sub_resource type="Animation" id="Animation_62rb6"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Blood:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dybgc"]
resource_name = "left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9.5, -56.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PizzaSpitter:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-72, -48)]
}

[sub_resource type="Animation" id="Animation_jekqo"]
resource_name = "right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7.335, -56.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../PizzaSpitter:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(70, -48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dybgc"]
_data = {
&"RESET": SubResource("Animation_pqynd"),
&"dead": SubResource("Animation_62rb6"),
&"left": SubResource("Animation_dybgc"),
&"right": SubResource("Animation_jekqo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62rb6"]
size = Vector2(181, 111)

[node name="Chez" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 33
script = ExtResource("1_62rb6")
projectile_scene = ExtResource("2_pqynd")
metadata/_custom_type_script = "uid://cfo03mojq1dw6"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -65)
scale = Vector2(0.245, 0.245)
texture = ExtResource("2_3gns2")
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_dybgc")
}

[node name="Blood" parent="." instance=ExtResource("3_62rb6")]
position = Vector2(0, -26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.5, -56.5)
shape = SubResource("RectangleShape2D_62rb6")

[node name="PizzaSpitter" type="Node2D" parent="."]
position = Vector2(-72, -48)

[node name="ProjectileCooldown" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-0.5, 0.500008)
scale = Vector2(49.95, 24.95)

[connection signal="timeout" from="ProjectileCooldown" to="." method="_on_projectile_cooldown_timeout"]
